# nanolm

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/nanolm/: __init__.py  data.py  modules.py  modules_dist.py  sample.py  train.py
test/: test_modules.py
tests/: test_gpu_memory.py  test_modules.py  test_modules_dist.py  test_size.py
