[project]
name = "mlprep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Justin Chiu", email = "justinchiu@g.harvard.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
