[project]
name = "nanolm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Justin Chiu", email = "chiu.justin.t@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.9.0",
    "datasets>=3.6.0",
    "hf-transfer>=0.1.9",
    "huggingface-hub[cli]>=0.32.4",
    "numpy>=2.2.6",
    "pre-commit>=4.2.0",
    "psutil>=7.0.0",
    "pytest>=8.4.0",
    "ruff>=0.12.12",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "wandb>=0.20.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"
